--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,8 @@
     "joi": "^17.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.24.2",
+    "react-hook-form": "^7.25.3",
+    "react-redux": "^7.2.6",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.3"
   },
